python-apt (0.7.97.2) UNRELEASED; urgency=low

  [ Kiwinote ]
  * apt/debfile:
    - don't fail if we conflict with the pkgs we are reinstalling

  [ Michael Vogt ]
  * apt/debfile.py:
    - add missing init for _installed_conflicts (LP: #618597)

 -- Michael Vogt <mvo@debian.org>  Fri, 27 Aug 2010 11:22:23 +0200

python-apt (0.7.97) UNRELEASED; urgency=low

  [ Julian Andres Klode ]
  * python/tag.cc:
    - Support gzip compression for control files (Closes: #383617),
      requires APT (>> 0.7.26~exp10) to work.
  * doc/conf.py:
    - Correctly handle non-digit characters in version (ignore everything
      after them).
  * python/apt_pkgmodule.cc:
    - Bind pkgAcquire::Item::StatTransientNetworkError (Closes: #589010)
  * doc/library/apt_pkg.rst:
    - Document Configuration.dump().
  
  [ Michael Vogt ]
  * python/configuration.cc:
    - add binding for the "dump()" method to configruation objects
  * apt/debfile.py:
    - fix crash in DscFile handling and add regression test
  * python/acquire.cc:
    - return long long when calling TotalNeeded(), FetchNeeded() and 
      PartialPresent() from pkgAcquire(). This follows the change
      in libapt.
  * add "provides" property to the apt.Version objects
  * apt/debfile.py:
    - fix error when reading binary content and add regresion test
  * merged patch from Samuel Lidén Borell to fix crash if there utf8 
    in the control file (LP: #624290) and add test
  * apt/cache.py:
    - add "sources_list" parameter to cache.update() to force updating
      a single sources.list entry only
  * debian/control:
    - add missing build-depends on python-debian (needed to run the
      tests for apt.debfile.DebPackage()

 -- Julian Andres Klode <jak@debian.org>  Fri, 23 Jul 2010 16:14:39 +0200

python-apt (0.7.96.1) unstable; urgency=low

  * tests/test_debfile.py:
   - properly setup fixture data to make debfile test pass 
     (closes: #588796)

 -- Michael Vogt <mvo@debian.org>  Mon, 12 Jul 2010 14:14:51 +0200
