@@ -7,6 +7,11 @@ python-apt (0.7.97.2) UNRELEASED; urgency=low
   [ Michael Vogt ]
   * apt/debfile.py:
     - add missing init for _installed_conflicts (LP: #618597)
+  * data/templates/Ubuntu.info.in:
+    - add extras.ubuntu.com and archvie.canonical.com to the
+      templates
+  * aptsources/distinfo.py, aptsources/distro.py:
+    - support non-official templates (like extras.ubuntu.com)
 
  -- Michael Vogt <mvo@debian.org>  Fri, 27 Aug 2010 11:22:23 +0200
 
